# Geant4

./: README.md
Calorimeter/: CMakeLists.txt  Calorimeter.cc
Calorimeter-build/: CMakeCache.txt  Calorimeter  G4History.macro  Makefile  cmake_install.cmake  vis.mac
Calorimeter/include/: ActionInitialization.hh  ChamberHit.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh
Calorimeter/src/: ChamberHit.cc  ChamberSD.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc
Geiger/: CMakeLists.txt  Geiger.cc  vis.mac
Geiger-build/: CMakeCache.txt  G4History.macro  Geiger  Makefile  cmake_install.cmake
Geiger/include/: EventAction.hh  (+5 more)
exampleRUT/: CMakeLists.txt  vis.mac
exampleRUT-build/: CMakeCache.txt  G4History.macro  Makefile  analysis_out.root  analyzeRutherford.C  cmake_install.cmake  exampleRUT  output.root  run.mac  vis.mac
muonTel/: CMakeLists.txt  Telescope.cc  output.root  prova_y-50.root  scan_angle.sh  scan_position.sh  tmp.mac  vis.mac
muonTel-build/: CMakeCache.txt  G4History.macro  Makefile  Telescope  cmake_install.cmake  output.root  run.mac  vis.mac  vis_presentation.mac
myBetheBloch/: exampleB1.cc
myBetheBloch-Build/: CMakeCache.txt  G4History.macro  Makefile  cmake_install.cmake  exampleB1  output.root  plot_bethebloch.C  run.mac  test.mac  vis.mac
sim/: CMakeLists.txt  sim.cc
sim-build/: CMakeCache.txt  Makefile  cmake_install.cmake  output.root  sim
sim/include/: action.hh  construction.hh  detector.hh  generator.hh  run.hh
sim/src/: action.cc  construction.cc  detector.cc  generator.cc  run.cc
(+97 files in other folders)
